feat: add spacing constants

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,4 +1,6 @@
 $Hauptfarbe-TSB-Dunkelblau: #1e3791;
+$color-white: #fff;
+$color-black: #000;
 
 $transition-fast: 0.125s all ease-in-out;
 $transition-slow: 0.25s all ease-in-out;
@@ -6,3 +8,11 @@ $transition-slow: 0.25s all ease-in-out;
 $absolute-break: 768px;
 $max-height-section: 1240px;
 $max-width-content: 1280px;
+
+$spacing-xs: 4px;
+$spacing-s: 8px;
+$spacing-m: 16px;
+$spacing-l: 24px;
+$spacing-xl: 32px;
+$spacing-xxl: 48px;
+$spacing-xxxl: 64px;
