--- a/src/sections/Main2024/Main2024.module.scss
+++ b/src/sections/Main2024/Main2024.module.scss
@@ -2,7 +2,7 @@
 
 :local {
   .wrapper {
-    background-color: $Hauptfarbe-TSB-Dunkelblau;
+    background-color: $color-primary-dark;
     width: 100%;
     margin-left: calc(-50vw + 50%);
     color: $color-white;
