--- a/src/sections/Sticky/Sticky.module.scss
+++ b/src/sections/Sticky/Sticky.module.scss
@@ -33,14 +33,14 @@
       padding-bottom: 40vh;
       .container {
         background-color: white;
-        border: 4px solid $Hauptfarbe-TSB-Dunkelblau;
+        border: 4px solid $color-primary-dark;
         padding: 32px 24px;
         .sub {
-          color: $Hauptfarbe-TSB-Dunkelblau;
+          color: $color-primary-dark;
           @include body-bold;
         }
         h4 {
-          color: $Hauptfarbe-TSB-Dunkelblau;
+          color: $color-primary-dark;
           margin: 3px 0 27px 0;
         }
         .paragraph {
