--- a/src/components/NewNavBar/NewNarbar.module.scss
+++ b/src/components/NewNavBar/NewNarbar.module.scss
@@ -39,7 +39,7 @@
           transform: translateX(-60px);
           p {
             @include body-bold;
-            color: $Hauptfarbe-TSB-Dunkelblau;
+            color: $color-primary-dark;
             white-space: nowrap;
           }
         }
