--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -4,7 +4,7 @@
   .rueckblick {
     margin-bottom: 160px;
     & > h2 {
-      color: $Hauptfarbe-TSB-Dunkelblau;
+      color: $color-primary-dark;
       width: fit-content;
       margin: 80px calc(((1280px - 1344px) / 2) + 24px + 90px);
       // width: 1344px;
@@ -30,15 +30,15 @@
             gap: 24px;
             .content {
               padding: 32px 24px;
-              border: 4px solid $Hauptfarbe-TSB-Dunkelblau;
+              border: 4px solid $color-primary-dark;
               width: 30%;
               h4 {
-                color: $Hauptfarbe-TSB-Dunkelblau;
+                color: $color-primary-dark;
                 margin-bottom: 32px;
               }
               & > p {
                 @include body-intro;
-                color: $Hauptfarbe-TSB-Dunkelblau;
+                color: $color-primary-dark;
                 margin-bottom: 32px;
               }
             }
