--- a/src/sections/Outro/Outro.module.scss
+++ b/src/sections/Outro/Outro.module.scss
@@ -6,7 +6,7 @@
     max-width: 1160px;
     margin: 0 auto;
     & > h2 {
-      color: $Hauptfarbe-TSB-Dunkelblau;
+      color: $color-primary-dark;
       padding: 80px 0;
     }
     .content {
@@ -17,11 +17,11 @@
         display: flex;
         flex-direction: column;
         & > h4 {
-          color: $Hauptfarbe-TSB-Dunkelblau;
+          color: $color-primary-dark;
         }
         & > p {
           @include body;
-          color: $Hauptfarbe-TSB-Dunkelblau;
+          color: $color-primary-dark;
           margin: 24px 0;
         }
         & > a {
@@ -31,7 +31,7 @@
     }
     .sub {
       margin: 72px 0;
-      color: $Hauptfarbe-TSB-Dunkelblau;
+      color: $color-primary-dark;
     }
     .logoWrapper {
       display: flex;
