--- a/src/sections/People/People.module.scss
+++ b/src/sections/People/People.module.scss
@@ -7,11 +7,11 @@
     padding: 80px 0;
     max-width: 1120px;
     h2 {
-      color: $Hauptfarbe-TSB-Dunkelblau;
+      color: $color-primary-dark;
       padding: 80px 0;
     }
     & > p {
-      color: $Hauptfarbe-TSB-Dunkelblau;
+      color: $color-primary-dark;
       @include alt-h2;
       padding: calc(48px + 32px) 0;
     }
@@ -49,16 +49,16 @@
         flex: 1;
         & > p {
           &:first-of-type {
-            color: $Hauptfarbe-TSB-Dunkelblau;
+            color: $color-primary-dark;
             @include body-intro;
             margin: 24px 0;
           }
           &:nth-of-type(2) {
-            color: $Hauptfarbe-TSB-Dunkelblau;
+            color: $color-primary-dark;
             @include copy-bold;
           }
           &:nth-of-type(3) {
-            color: $Hauptfarbe-TSB-Dunkelblau;
+            color: $color-primary-dark;
             @include copy;
             margin-bottom: 24px;
           }
