--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -2,6 +2,8 @@ $color-primary-dark: #1e3791;
 $color-white: #fff;
 $color-black: #000;
 
+$drop-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
+
 $transition-fast: 0.125s all ease-in-out;
 $transition-slow: 0.25s all ease-in-out;
 
